--- a/2-foodie/app/meals/[mealSlug]/page.module.css
+++ b/2-foodie/app/meals/[mealSlug]/page.module.css
@@ -1,4 +1,4 @@
-a.header {
+.header {
   display: flex;
   padding: 2rem 1rem;
   gap: 3rem;
@@ -30,7 +30,7 @@ a.header {
   margin: 0;
   font-size: 3.5rem;
   text-transform: uppercase;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
 }
 
